manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-example
  labels:
    app.kubernetes.io/name: k8s-example
